# typosafe

./: CONTRIBUTING.md  README.md  pyproject.toml  test_typosafe.py  typosafe.py
.github/workflows/: ci.yml  publish.yml
examples/: requirements-safe.txt  requirements-suspicious.txt
