[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "typosafe"
version = "1.0.0"
description = "Supply Chain Typosquatting Detector — check Python dependencies for typosquatting attacks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Kris Kimmerle", email = "kris@kriskimmerle.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
keywords = ["typosquatting", "supply-chain", "security", "pypi", "dependencies", "audit"]

[project.urls]
Homepage = "https://github.com/kriskimmerle/typosafe"
Repository = "https://github.com/kriskimmerle/typosafe"
Issues = "https://github.com/kriskimmerle/typosafe/issues"

[project.scripts]
typosafe = "typosafe:main"
